[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynsn"
authors = [{name = "Oliver Lindemann", email = "lindemann@essb.eur.nl"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies =  ["numpy>=1.26",
                    "shapely>=2.0",
                    "orjson>=3.9",
                    "Pillow>=10.0"]

[project.optional-dependencies]
svg = ["svgwrite>=1.4"]
pygame = ["pygame>=2.5"]
expyriment = ["expyriment>=0.9"]
matplotlib = ["matplotlib>=3.8"]
test = [
    "pytest >=2.7.3"
]
doc = ["Sphinx>=5.1",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"]


[project.urls]
Documentation = "https://github.com/lindemann09/PyNSN"
Source = "https://github.com/lindemann09/PyNSN"